--- a/index.html
+++ b/index.html
@@ -28,6 +28,71 @@
         animation: shake 0.2s cubic-bezier(.36,.07,.19,.97) both;
         animation-iteration-count: infinite;
       }
+      
+      /* Background Animations */
+      @keyframes warp-grid {
+        0% { transform: perspective(500px) rotateX(60deg) translateY(0); }
+        100% { transform: perspective(500px) rotateX(60deg) translateY(40px); }
+      }
+      .bg-warped-grid {
+        background-image: linear-gradient(#ccc 1px, transparent 1px), linear-gradient(90deg, #ccc 1px, transparent 1px);
+        background-size: 40px 40px;
+        width: 200vw;
+        height: 200vh;
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        opacity: 0.15;
+        animation: warp-grid 2s linear infinite;
+        pointer-events: none;
+        z-index: 0;
+      }
+
+      @keyframes scanline {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(100vh); }
+      }
+      @keyframes flicker {
+        0% { opacity: 0.85; }
+        5% { opacity: 0.95; }
+        10% { opacity: 0.85; }
+        15% { opacity: 0.9; }
+        20% { opacity: 0.85; }
+        50% { opacity: 0.85; }
+        55% { opacity: 0.95; }
+        60% { opacity: 0.85; }
+        100% { opacity: 0.85; }
+      }
+      .bg-crt-overlay {
+        background: linear-gradient(
+          to bottom,
+          rgba(255, 255, 255, 0),
+          rgba(255, 255, 255, 0) 50%,
+          rgba(0, 0, 0, 0.2) 50%,
+          rgba(0, 0, 0, 0.2)
+        );
+        background-size: 100% 4px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        pointer-events: none;
+        z-index: 10;
+        animation: flicker 0.15s infinite;
+      }
+      .bg-crt-line {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 20px;
+        background: rgba(0, 255, 0, 0.1);
+        animation: scanline 3s linear infinite;
+        pointer-events: none;
+        z-index: 11;
+      }
+
       /* Custom Slider Styles */
       .slider-track {
         background-image: repeating-linear-gradient(
@@ -41,14 +106,14 @@
         opacity: 0.2;
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "vite": "https://aistudiocdn.com/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
