--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>The Unstable Slider</title>
     <!-- Using CDN for Tailwind for simplicity in this setup -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Physics Engine -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
       @keyframes shake {
         0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -105,6 +107,9 @@
         background-size: 10px 10px;
         opacity: 0.2;
       }
+
+      /* Zen Game Typography */
+      @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap');
     </style>
 <script type="importmap">
 {
